# pyUCRio

./: .coveragerc  COVERAGE.md  DEVELOPER_GUIDE.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/notebooks/data/: download_and_read_data.ipynb  explore_datasets_and_observatories.ipynb
examples/notebooks/tools/: plot_riometer_data.ipynb  plot_riometer_sites.ipynb
examples/scripts/: get_version.py  initialize.py
examples/scripts/data/ucalgary/: download.py  download_using_urls.py  get_dataset.py  get_urls.py  list_datasets.py  list_datasets_filtered.py  list_observatories.py  list_observatories_filtered.py
examples/scripts/data/ucalgary/read/: read_check_if_supported.py  read_list_supported_datasets.py  read_norstar_riometer.py  read_swan_hsr.py  read_unsupported_dataset.py
examples/scripts/data/ucalgary/read/specifically_defined_reader/: read_norstar_riometer.py  read_swan_hsr.py
pyucrio/: __init__.py  _util.py  exceptions.py  pyucrio.py
pyucrio/data/: __init__.py
pyucrio/data/ucalgary/: __init__.py
pyucrio/data/ucalgary/read/: __init__.py
pyucrio/tools/: __init__.py  _plot.py
pyucrio/tools/classes/: site_map.py
pyucrio/tools/site_map/: __init__.py  _create_map.py
tests/test_data/data/ucalgary/read/read_norstar_riometer/: norstar_k0_rio-fsim_20180503_v01.txt
tests/test_data/data/ucalgary/read/read_swan_hsr/: 20240203_mean-hsr_k0_v01.h5
tests/test_suite/: .env.sample  conftest.py  test_pyucrio.py  test_version.py
tests/test_suite/data/: test_datasets.py  test_download.py  test_observatories.py
tests/test_suite/data/read/: test_read.py
tests/test_suite/tools/: __init__.py  test_plot_generic.py  test_plot_hsr.py  test_plot_riometer.py  test_theme.py
tests/test_suite/tools/classes/site_map/: test_add_availability.py  test_plot.py
tests/test_suite/tools/site_map/: test_create.py
tools/: bump_version.py  check_docstrings.py  check_for_license.py
