[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyucrio"
version = "1.1.0"
description = "Python library supporting data access and analysis for riometer instrument data"
readme = "README.md"
homepage = "https://github.com/ucalgary-srs/pyUCRio"
repository = "https://github.com/ucalgary-srs/pyUCRio"
authors = ["Darren Chaddock <dchaddoc@ucalgary.ca>"]
# license = 
packages = [
    { include = "pyucrio" },
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "space physics",
    "space weather",
    "riometer",
]

[tool.poetry.urls]
"Documentation" = "https://docs-pyucrio.phys.ucalgary.ca"
"API Reference" = "https://docs-pyucrio.phys.ucalgary.ca"
"Bug Tracker" = "https://github.com/ucalgary-srs/pyUCRio/issues"
"UCalgary SRS Open Data Platform" = "https://data.phys.ucalgary.ca"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.1"
humanize = "^4.4.0"
texttable = "^1.6.4"
tqdm = "^4.61.2"
numpy = "^1.21.0"
joblib = "^1.0.0"
aacgmv2 = "^2.6.2"
matplotlib = "^3.9.0"
pyucalgarysrs = "1.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.4"
pytest = "8.3.4"
pycodestyle = "2.12.1"
yapf = "0.43.0"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
bandit = "1.8.2"
pyright = "1.1.393"
pdoc3 = "0.11.5"

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "F403",  # `from .schemas import *` used; unable to detect undefined names
    "F405",  # `Union` may be undefined, or defined from star imports
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyucrio/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyucrio/**/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
# addopts = -p no:warnings
testpaths = [
    "tests/test_suite/**/*.py",
]
markers = [
    "top_level: top level PyUCRio object tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = ["B110"]
