[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyucrio"
version = "1.3.0"
description = "Python library supporting data access and analysis for riometer instrument data"
readme = "README.md"
homepage = "https://github.com/ucalgary-srs/pyUCRio"
repository = "https://github.com/ucalgary-srs/pyUCRio"
authors = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>",
    "Josh Houghton <joshua.houghton1@ucalgary.ca>"
]
maintainers = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>",
    "Josh Houghton <joshua.houghton1@ucalgary.ca>"
]
license = "Apache 2.0"
packages = [
    { include = "pyucrio" },
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "space physics",
    "space weather",
    "riometer",
]

[tool.poetry.urls]
"Documentation" = "https://docs-pyucrio.phys.ucalgary.ca"
"API Reference" = "https://docs-pyucrio.phys.ucalgary.ca"
"Bug Tracker" = "https://github.com/ucalgary-srs/pyUCRio/issues"
"UCalgary SRS Open Data Platform" = "https://data.phys.ucalgary.ca"

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = "^2.28.1"
humanize = "^4.4.0"
texttable = "^1.6.4"
tqdm = "^4.61.2"
numpy = "^1.21.0"
joblib = "^1.0.0"
aacgmv2 = "^2.6.2"
matplotlib = "^3.9.0"
pyucalgarysrs = "1.18.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.4"
pytest = "8.3.4"
pycodestyle = "2.12.1"
yapf = "0.43.0"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
bandit = "1.8.2"
pyright = "1.1.393"
pdoc3 = "0.11.5"
jupyter = "^1.1.1"
iprogress = "^0.4"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
nbval = "^0.11.0"

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "F403",  # `from .schemas import *` used; unable to detect undefined names
    "F405",  # `Union` may be undefined, or defined from star imports
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyucrio/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyucrio/**/*.py",
    "examples/**/*.py",
    "examples/**/*.ipynb",
    "tests/test_suite/**/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = [
    "tests/test_suite/**/*.py",
]
markers = [
    "top_level: top level PyUCRio object tests",
    "data: data distribution tests",
    "tools: data analysis support tools tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = ["B110"]
