[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyucrio"
version = "1.6.0"
description = "Python library supporting data access and analysis for riometer instrument data"
readme = "README.md"
homepage = "https://github.com/ucalgary-srs/pyUCRio"
repository = "https://github.com/ucalgary-srs/pyUCRio"
authors = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>",
    "Josh Houghton <joshua.houghton1@ucalgary.ca>"
]
maintainers = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>",
    "Josh Houghton <joshua.houghton1@ucalgary.ca>"
]
license = "Apache License 2.0" 
packages = [
    { include = "pyucrio" },
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "space physics",
    "space weather",
    "riometer",
]

[tool.poetry.urls]
"API Reference" = "https://docs-pyucrio.phys.ucalgary.ca"
"UCalgary SRS Open Data Platform" = "https://data.phys.ucalgary.ca"

[tool.poetry.dependencies]
python = ">=3.9"
humanize = "^4.4.0"
texttable = "^1.6.4"
aacgmv2 = "^2.6.2"
numpy = [
    {version = "^1.21.0", python = ">=3.9,<3.10"},
    {version = ">=1.21.0,<3.0.0", python = ">=3.10"}
]
matplotlib = [
    {version = "^3.4.0", python = ">=3.9,<3.10"},
    {version = "^3.5.0", python = ">=3.10"}
]
pyproj = [
    {version = "^3.6.1", python = ">=3.9,<3.10"},
    {version = "^3.7.0", python = ">=3.10"}
]
cartopy = [
    {version = "^0.23.0", python = ">=3.9,<3.10"},
    {version = "^0.24.0", python = ">=3.10"}
]
pyucalgarysrs = "1.21.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.11.11"
pytest = "8.3.5"
pycodestyle = "2.13.0"
yapf = "0.43.0"
pytest-xdist = "3.7.0"
pytest-sugar = "1.0.0"
pytest-cov = "6.1.1"
bandit = "1.8.3"
pyright = "1.1.401"
pdoc3 = "0.11.6"
jupyter = "1.1.1"
iprogress = "0.4"
ipywidgets = "8.1.7"
ipykernel = "6.29.5"
nbmake = "1.5.5"

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "F403",  # `from .schemas import *` used; unable to detect undefined names
    "F405",  # `Union` may be undefined, or defined from star imports
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyucrio/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyucrio/*.py",
    "pyucrio/**/*.py",
    "examples/**/*.py",
    "examples/**/*.ipynb",
    "tests/test_suite/*.py",
    "tests/test_suite/**/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:aacgmv2.*",  # aacgmv2 v1.7.2 has a DeprecationWarning showing up, so we ignore it (https://github.com/aburrell/aacgmv2/issues/94)
]
testpaths = ["tests/test_suite"]
markers = [
    "top_level: top level PyUCRio object tests",
    "data: data distribution tests",
    "tools: data analysis support tools tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = ["B110"]
